优化登录和注册
