# internal/domain/user/entity/user.go
@@ -7,10 +7,10 @@ import (
 
 type User struct {
 	ID           int64  `gorm:"primaryKey" json:"id"`
-	Nickname     string `gorm:"index:nickname;column:nickname;type:varchar(255);not null" json:"nickname"` // 用户名
+	Username     string `gorm:"unique;column:username;type:varchar(255);not null" json:"username"` // 用户名
 	PasswordHash string `gorm:"column:password_hash;type:varchar(255)" json:"password_hash"`
-	Email        string `gorm:"unique;column:email;type:varchar(255)" json:"email"`
-	Mobile       string `gorm:"unique;column:mobile;type:varchar(255)" json:"mobile"`
+	Email        string `gorm:"unique;column:email;type:varchar(255);default:null" json:"email"`
+	Mobile       string `gorm:"unique;column:mobile;type:varchar(255);default:null" json:"mobile"`
 	Avatar       string `gorm:"column:avatar;type:varchar(255)" json:"avatar"`
 	Role         string `gorm:"column:role;type:varchar(255);not null" json:"role"`
 	Createtime   int64  `gorm:"column:createtime;type:bigint(20);not null" json:"createtime"`
